# content-factory

./: .gitignore  README.md  pyproject.toml
examples/: brief_en.yaml  brief_ru.yaml
profiles/: style_profile.yaml
prompts/: clarify.txt  core_synth.txt  patch.txt  qa.txt  render_blog.txt  render_linkedin.txt  render_x.txt  voice_blog.txt  voice_linkedin.txt  voice_x.txt
specs/: platform_blog.yaml  platform_linkedin.yaml  platform_x.yaml
src/content_factory/: __init__.py  api.py  cli.py  graph.py  models.py  resources.py  storage.py
src/content_factory/llm/: __init__.py  base.py  openai_provider.py
